--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
+    "playwright": "^1.54.2",
     "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
