--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "hr-candidate-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "prisma generate && next build",
@@ -15,6 +19,7 @@
     "start:test": "NODE_ENV=test next start",
     "start:production": "NODE_ENV=production next start",
     "lint": "next lint",
+    "validate-env": "node scripts/validate-env.js",
     "postinstall": "prisma generate",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy"
