--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "build:local": "NODE_ENV=development prisma generate && next build",
     "build:dev": "NODE_ENV=development prisma generate && next build",
     "build:test": "NODE_ENV=test prisma generate && next build",
+    "build:stage": "NODE_ENV=stage prisma generate && next build",
     "build:production": "NODE_ENV=production prisma generate && next build",
     "start": "next start",
     "start:local": "NODE_ENV=development next start",
     "start:dev": "NODE_ENV=development next start",
     "start:test": "NODE_ENV=test next start",
+    "start:stage": "NODE_ENV=stage next start",
     "start:production": "NODE_ENV=production next start",
     "lint": "next lint",
     "validate-env": "node scripts/validate-env.js",
